--- a/web/templates/web/list.html
+++ b/web/templates/web/list.html
@@ -45,7 +45,7 @@
 
             <div class="collapse navbar-collapse" id="navbarTop">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'show_list' %}" id="list">목록보기</a> </li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'show_list_1' %}" id="list">목록보기</a> </li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'register' %}" id="register">등록하기</a> </li>
                 </ul>
             </div>
@@ -66,7 +66,7 @@
                                     </select>
                                     <select name="s2" id="searchProg" class="form-control">
                                         <option selected value="">프로그램 선택</option>
-                                        <option value="일러스트">일러스트</option>
+                                        <option value="일러스트레이터">일러스트</option>
                                         <option value="포토샵">포토샵</option>
                                         <option value="엑셀">엑셀</option>
                                     </select>
