--- a/web/templates/web/list.html
+++ b/web/templates/web/list.html
@@ -45,7 +45,7 @@
 
             <div class="collapse navbar-collapse" id="navbarTop">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'show_list_1' %}" id="list">목록보기</a> </li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'delete' %}" id="list">목록보기</a> </li>
                     <li class="nav-item"><a class="nav-link" href="{% url 'register' %}" id="register">등록하기</a> </li>
                 </ul>
             </div>
